fix(sortable-folder): fix gap between items in folder

--- a/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
+++ b/src/app/alino-app/components/sidebar/folders/SortableFolder.module.css
@@ -70,6 +70,11 @@
   user-select: none;
   z-index: 2;
 
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: flex-start;
+
   scrollbar-width: thin;
   scrollbar-color: transparent transparent;
   transition: scrollbar-color 0.3s ease;
